# shadertastic

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.template.json  README.md  buildspec.json  installer.iss.in
.github/actions/package-plugin/: action.yaml
.github/scripts/: .Aptfile  Package-Windows.ps1
.github/workflows/: build-dependencies.yaml  build-project.yaml  push.yaml
cmake/: FetchOnnxruntime.cmake  FetchOpenCV.cmake
cmake/common/: compiler_common.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake
data/effects/: crop192.hlsl
data/effects/filters/color_flip/: main.hlsl  meta.json
data/effects/filters/color_invert/: main.hlsl  meta.json
data/effects/filters/displacement_map_source/: meta.json
data/effects/filters/face_detection_distort/: meta.json
data/effects/filters/face_detection_laser_eyes/: main.hlsl  meta.json
data/effects/filters/face_detection_ref/: main.hlsl  meta.json
data/effects/filters/face_detection_zoom/: meta.json
data/effects/filters/gaussianblur/: main.hlsl  meta.json
data/effects/filters/ghost/: main.hlsl  meta.json
data/effects/filters/pixelate/: meta.json
data/effects/filters/rainbow/: main.hlsl  meta.json
data/effects/filters/rainbow_recur/: main.hlsl  meta.json
data/effects/filters/recursion/: main.hlsl  meta.json
data/effects/filters/shake/: meta.json
data/effects/filters/sobel/: main.hlsl  meta.json
data/effects/filters/vignette/: meta.json
data/effects/transitions/burn/: main.hlsl  meta.json
data/effects/transitions/displace/: meta.json
data/effects/transitions/frost_slide/: main.hlsl  meta.json
data/effects/transitions/gaussianblur/: main.hlsl  meta.json
data/effects/transitions/inkdrop/: main.hlsl  meta.json
data/effects/transitions/pixelate/: main.hlsl  meta.json
data/locale/: en-US.ini  es-ES.ini
dev_effects/: README.md
dev_effects/filters/color_test/: main.hlsl  meta.json
dev_effects/filters/face_detection_ref_legacy/: main.hlsl  meta.json
dev_effects/filters/identity/: main.hlsl  meta.json
dev_effects/filters/rainbow_recur/: main.hlsl  meta.json
dev_effects/filters/transparency_test/: main.hlsl  meta.json
dev_effects/transitions/color_test/: main.hlsl
dev_effects/transitions/fade/: main.hlsl  meta.json
devtools/: add_header_guards.sh
doc/: generate-code-signing.md
metadata_schema/: meta.json.schema.json  package-lock.json  package.json
metadata_schema/src/: meta.d.ts
onnxmediapipe/src/: face_detection.cpp  face_landmarks.cpp  face_mesh.cpp  models_provider.cpp
src/: effect.cpp  effect.h  fdebug.cpp  fdebug.h  is_module_loaded.h  logging_functions.hpp  obs-source-custom.cpp  obs-source-custom.h  params_list.hpp  settings.cpp  settings.h  shader_filter.hpp  shader_transition.hpp  shadertastic.cpp  shadertastic.hpp  shadertastic_common.hpp  to_string.hpp  try_gs_effect_set.h  version.h.in  win_dll_overrides.cpp  win_dll_overrides.h
src/face_tracking/: face_tracking.cpp  face_tracking.h  face_tracking_crop_shader.cpp  face_tracking_crop_shader.h  face_tracking_state.h  one_euro_filter.cpp  one_euro_filter.h
src/parameters/: parameter.hpp  parameter_audiolevel.hpp  parameter_bool.hpp  parameter_color_alpha.hpp  parameter_datatype.hpp  parameter_facetracking.hpp  parameter_factory.cpp  parameter_factory.h  parameter_float.hpp  parameter_image.hpp  parameter_int.hpp  parameter_list_int.hpp  parameter_prev_frame.hpp  parameter_source.hpp  parameter_text.hpp  parameter_time.hpp  parameter_unknown.hpp
src/shader/: shader.cpp  shader.h  shaders_library.cpp  shaders_library.h
src/util/: debug_util.hpp  enum_util.hpp  file_util.cpp  file_util.h  rgba_to_rgb.h  string_util.h  texture_util.cpp  texture_util.h  time_util.hpp  tuple.h
